Fixed some of promise calls, removed array objects for models from swagger.
