# src/controllers/milestone-controller.js
@@ -2,40 +2,6 @@ import { logInfo } from '../logger';
 import { milestoneService } from '../services/milestone-service';
 import { goalService } from '../services/goal-service';
 
-// const create = function (req, res, next) {
-// 	logRequest(req);
-// 	validateGoalId(req);
-// 	validateBody(req);
-
-// 	var validationErrors = req.validationErrors();
-
-// 	if (validationErrors) {
-// 		res.status(400);
-// 		res.json(validationErrors);
-// 	} else {
-// 		const milestone = req.body;
-// 		const goalId = req.params.goalId;
-
-// 		goalService.checkIfExists(goalId).then(exists => {
-// 			if (!exists) {
-// 				res.status(404);
-// 				res.statusMessage = `Goal with id: "${goalId}" does not exist.`;
-// 				res.end();
-// 			} else {
-// 				milestoneService.create(goalId, milestone).then(newMilestone => {
-// 					res.status(201);
-// 					res.json(newMilestone);
-// 					res.end();
-// 				}).catch(err => {
-// 					next(err);
-// 				});
-// 			}
-// 		}).catch(err => {
-// 			next(err);
-// 		});
-// 	}
-// };
-
 const create = function (req, res, next) {
 	logRequest(req);
 	validateGoalId(req);
@@ -56,48 +22,17 @@ const create = function (req, res, next) {
 				res.statusMessage = `Goal with id: "${goalId}" does not exist.`;
 				res.end();
 			} else {
-				return milestoneService.create(goalId, milestone);
+				milestoneService.create(goalId, milestone).then(newMilestone => {
+					res.status(201);
+					res.json(newMilestone);
+					res.end();
+				});
 			}
-		}).then(newMilestone => {
-			res.status(201);
-			res.json(newMilestone);
-			res.end();
 		}).catch(err => {
 			next(err);
 		});
 	}
 };
-
-// const getAllByParent = function (req, res, next) {
-// 	logRequest(req);
-// 	validateGoalId(req);
-	
-// 	var validationErrors = req.validationErrors();
-
-// 	if (validationErrors) {
-// 		res.status(400);
-// 		res.json(validationErrors);
-// 	} else {
-// 		const goalId = req.params.goalId;
-
-// 		goalService.checkIfExists(goalId).then(exists => {
-// 			if (!exists) {
-// 				res.status(404);
-// 				res.statusMessage = `Goal with id: "${goalId}" does not exist.`;
-// 				res.end();
-// 			} else {
-// 				milestoneService.getAllByParent(goalId).then(milestones => {
-// 					res.status(200);
-// 					res.json(milestones);
-// 				}).catch(err => {
-// 					next(err);
-// 				});
-// 			}
-// 		}).catch(err => {
-// 			next(err);
-// 		});
-// 	}
-// };
 
 const getAllByParent = function (req, res, next) {
 	logRequest(req);
@@ -117,55 +52,16 @@ const getAllByParent = function (req, res, next) {
 				res.statusMessage = `Goal with id: "${goalId}" does not exist.`;
 				res.end();
 			} else {
-				return milestoneService.getAllByParent(goalId);
+				milestoneService.getAllByParent(goalId).then(milestones => {
+					res.status(200);
+					res.json(milestones);
+				});
 			}
-		}).then(milestones => {
-			res.status(200);
-			res.json(milestones);
 		}).catch(err => {
 			next(err);
 		});
 	}
 };
-
-// const getSingleByParent = function (req, res, next) {
-// 	logRequest(req);
-// 	validateGoalId(req);
-// 	validateMilestoneId(req);
-
-// 	var validationErrors = req.validationErrors();
-
-// 	if (validationErrors) {
-// 		res.status(400);
-// 		res.json(validationErrors);
-// 	} else {
-// 		const id = req.params.id;
-// 		const goalId = req.params.goalId;
-
-// 		goalService.checkIfExists(goalId).then(exists => {
-// 			if (!exists) {
-// 				res.status(404);
-// 				res.statusMessage = `Goal with id: "${goalId}" does not exist.`;
-// 				res.end();
-// 			} else {
-// 				milestoneService.getSingleByParent(id, goalId).then(milestone => {
-// 					if (!milestone) {
-// 						res.status(404);
-// 						res.statusMessage = `Milestone with id: "${id}" does not exist.`;
-// 						res.end();
-// 					} else {
-// 						res.status(200);
-// 						res.json(milestone);
-// 					}
-// 				}).catch(err => {
-// 					next(err);
-// 				});
-// 			}
-// 		}).catch(err => {
-// 			next(err);
-// 		});
-// 	}
-// };
 
 const getSingleByParent = function (req, res, next) {
 	logRequest(req);
@@ -178,7 +74,7 @@ const getSingleByParent = function (req, res, next) {
 		res.status(400);
 		res.json(validationErrors);
 	} else {
-		const id = req.params.id;
+		const milestoneId = req.params.milestoneId;
 		const goalId = req.params.goalId;
 
 		goalService.checkIfExists(goalId).then(exists => {
@@ -187,46 +83,22 @@ const getSingleByParent = function (req, res, next) {
 				res.statusMessage = `Goal with id: "${goalId}" does not exist.`;
 				res.end();
 			} else {
-				return milestoneService.getSingleByParent(id, goalId);
-			}
-		}).then((milestone) => {
-			if (!milestone) {
-				res.status(404);
-				res.statusMessage = `Milestone with id: "${id}" does not exist.`;
-				res.end();
-			} else {
-				res.status(200);
-				res.json(milestone);
+				milestoneService.getSingleByParent(milestoneId, goalId).then((milestone) => {
+					if (!milestone) {
+						res.status(404);
+						res.statusMessage = `Milestone with id: "${milestoneId}" does not exist.`;
+						res.end();
+					} else {
+						res.status(200);
+						res.json(milestone);
+					}
+				});
 			}
 		}).catch(err => {
 			next(err);
 		});
 	}
 };
-
-// const update = function (req, res, next) {
-// 	logRequest(req);
-// 	validateGoalId(req);
-// 	validateMilestoneId(req);
-// 	validateBody(req);
-
-// 	var validationErrors = req.validationErrors();
-
-// 	if (validationErrors) {
-// 		res.status(400);
-// 		res.json(validationErrors);
-// 	} else {
-// 		const id = req.params.id;
-// 		const milestone = req.body;
-	
-// 		milestoneService.update(id, milestone).then(() => {
-// 			res.status(204);
-// 			res.end();
-// 		}).catch(err => {
-// 			next(err);
-// 		});
-// 	}
-// };
 
 const update = function (req, res, next) {
 	logRequest(req);
@@ -240,49 +112,26 @@ const update = function (req, res, next) {
 		res.status(400);
 		res.json(validationErrors);
 	} else {
-		const id = req.params.id;
+		const milestoneId = req.params.milestoneId;
 		const milestone = req.body;
 		const goalId = req.params.goalId;
 	
-		goalService.checkIfExists(goalId).then(exists => {
+		milestoneService.checkIfExists(milestoneId, goalId).then(exists => {
 			if (!exists) {
 				res.status(404);
-				res.statusMessage = `Goal with id: "${goalId}" does not exist.`;
+				res.statusMessage = `Goal with id: "${goalId}" does not contain milestone with id "${milestoneId}".`;
 				res.end();
 			} else {
-				return milestoneService.update(id, milestone);
+				milestoneService.update(milestoneId, milestone).then(() => {
+					res.status(204);
+					res.end();
+				});
 			}
-		}).then(() => {
-			res.status(204);
-			res.end();
 		}).catch(err => {
 			next(err);
 		});
 	}
 };
-
-// const remove = function (req, res, next) {
-// 	logRequest(req);
-// 	validateGoalId(req);
-// 	validateMilestoneId(req);
-
-// 	var validationErrors = req.validationErrors();
-
-// 	if (validationErrors) {
-// 		res.status(400);
-// 		res.json(validationErrors);
-// 	} else {
-// 		const id = req.params.id;
-// 		const goalId = req.params.goalId;
-	
-// 		milestoneService.remove(id, goalId).then(() => {
-// 			res.status(204);
-// 			res.end();
-// 		}).catch(err => {
-// 			next(err);
-// 		});
-// 	}
-// };
 
 const remove = function (req, res, next) {
 	logRequest(req);
@@ -295,20 +144,20 @@ const remove = function (req, res, next) {
 		res.status(400);
 		res.json(validationErrors);
 	} else {
-		const id = req.params.id;
+		const milestoneId = req.params.milestoneId;
 		const goalId = req.params.goalId;
 	
-		goalService.checkIfExists(goalId).then(exists => {
+		milestoneService.checkIfExists(milestoneId, goalId).then(exists => {
 			if (!exists) {
 				res.status(404);
-				res.statusMessage = `Goal with id: "${goalId}" does not exist.`;
+				res.statusMessage = `Goal with id: "${goalId}" does not contain milestone with id "${milestoneId}".`;
 				res.end();
 			} else {
-				return milestoneService.remove(id, goalId);
+				milestoneService.remove(milestoneId, goalId).then(() => {
+					res.status(204);
+					res.end();
+				});
 			}
-		}).then(() => {
-			res.status(204);
-			res.end();
 		}).catch(err => {
 			next(err);
 		});
@@ -320,7 +169,7 @@ const validateGoalId = function(req) {
 };
 
 const validateMilestoneId = function(req) {
-	req.checkParams('id', 'Milestone id should be a valid identifier.').isMongoId();
+	req.checkParams('milestoneId', 'Milestone id should be a valid identifier.').isMongoId();
 };
 
 const validateBody = function(req) {
